# BehaveAI

./: BehaveAI_classify_track.py  pyproject.toml
behaveai/: cli.py  launcher.py  motion.py
